<?xml version="1.0"?>
<package format="2">
  <name>bs_optimizers</name>
  <version>0.4.0</version>
  <description>
    The fuse_optimizers package provides a set of optimizer implementations. An optimizer is the object responsible
    for coordinating the sensors and motion model inputs, computing the optimal state values, and providing access to
    to the optimal state via the publishers.
  </description>

  <maintainer email="jake.mclaughlin98@gmail.com">Jake McLaughlin</maintainer>
  <author email="jake.mclaughlin98@gmail.com">Jake McLaughlin</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>diagnostic_updater</depend>
  <depend>fuse_optimizers</depend>
  <depend>fuse_constraints</depend>
  <depend>fuse_core</depend>
  <depend>fuse_graphs</depend>
  <depend>fuse_variables</depend>
  <depend>bs_constraints</depend>
  <depend>bs_common</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>std_srvs</depend>
  <test_depend>fuse_models</test_depend>
  <test_depend>geometry_msgs</test_depend>
  <test_depend>nav_msgs</test_depend>
  <test_depend>roslint</test_depend>
  <test_depend>rostest</test_depend>

</package>
