<?xml version="1.0"?>
<package format="2">
  <name>bs_publishers</name>
  <version>0.4.0</version>
  <description>
    The bs_publishers package provides custom fuse publishers that are not available from fuse.
  </description>

  <maintainer email="nicholas.c.charron@gmail.com">Nick Charron</maintainer>
  <author email="nicholas.c.charron@gmail.com">Nick Charron</author>

  <license>Proprietary</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libbeam</build_depend>

  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>roscpp</depend>
  <depend>tf2</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>

  <depend>fuse_core</depend>
  <depend>fuse_variables</depend>
  <depend>bs_models</depend>
  <depend>bs_common</depend>
  <depend>bs_constraints</depend>

  <export>
    <fuse_core plugin="${prefix}/fuse_plugins.xml" />
  </export>
</package>
