<?xml version="1.0"?>
<package format="2">
  <name>bs_tools</name>
  <version>0.1.0</version>
  <description>general tools for beam_slam</description>

  <author email="nicholas.c.charron@gmail.com">Nick Charron</author>
  <maintainer email="nicholas.c.charron@gmail.com">Nick Charron</maintainer>

  <license>BSD</license>

  <build_depend>libbeam</build_depend>
  
  <depend>bs_models</depend>

</package>
