<?xml version="1.0"?>
<package format="2">
  <name>bs_tools</name>
  <version>0.1.0</version>
  <description>general tools for beam_slam</description>

  <author email="nicholas.c.charron@gmail.com">Nick Charron</author>
  <maintainer email="nicholas.c.charron@gmail.com">Nick Charron</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>libbeam</build_depend>
  
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>bs_models</depend>
  <depend>bs_common</depend>

</package>