<?xml version="1.0"?>
<package format="2">
    <name>global_mapping</name>
    <version>0.0.1</version>
    <description>A package for collecting local mapping data and aggregating into a global map to send to a pose graphoptimizer</description>
    <author email="nicholas.c.charron@gmail.com">Nick Charron</author>
    <maintainer email="nicholas.c.charron@gmail.com">Nick Charron</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>libbeam</build_depend>
    <build_depend>message_generation</build_depend>

    <depend>pluginlib</depend>
    <depend>roscpp</depend>
    <depend>roslib</depend>
    <depend>nodelet</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>eigen</depend>
    <depend>pcl_conversions</depend>
    <depend>geometry_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_2d</depend>
    <depend>tf2_geometry_msgs</depend>
    <depend>tf2_ros</depend>

    <depend>fuse_constraints</depend>
    <depend>fuse_core</depend>
    <depend>fuse_graphs</depend>
    <depend>fuse_models</depend>
    <depend>fuse_publishers</depend>
    <depend>fuse_variables</depend>

    <depend>beam_slam_common</depend>
    <depend>beam_models</depend>
    <depend>beam_constraints</depend>

    <exec_depend>message_runtime</exec_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <nodelet plugin="${prefix}/fuse_plugins.xml"/>
    </export>
</package>
