<?xml version="1.0"?>
<package format="2">
    <name>lidar_aggregation</name>
    <version>0.0.1</version>
    <description>A package for aggregating lidar scans given pose and extrinsic transforms</description>
    <maintainer email="ncharron@uwaterloo.ca">Nick Charron</maintainer>
    <license>BSD</license>
    <author>ncharron@uwaterloo.ca</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>libbeam</build_depend>
    <depend>roscpp</depend>
    <depend>roslib</depend>
    <depend>nodelet</depend>
    <depend>std_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>sensor_msgs</depend>
    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <nodelet plugin="${prefix}/nodelets.xml"/>
    </export>
</package>
